User update sequence in admin panel.

--- a/protected/modules/administration/assets/css/buttons.css
+++ b/protected/modules/administration/assets/css/buttons.css
@@ -30,7 +30,7 @@
 	height: 14px;
 }
 
-input[type="submit"].button {
+input[type="submit"].button, input[type="reset"].button {
 	height: 26px;
 }
 
